# unfold

./: .env.example  .gitignore  README.md  docker-compose.yml  index.yaml  unfold-0.0.1.tgz
.github/workflows/: docker.yml  helm.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/models/: graph.py
backend/app/routes/: graph.py  query.py  schema.py
backend/app/services/: neo4j_service.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CypherEditor.tsx  GraphCanvas.tsx  NodeDetail.tsx  SchemaBrowser.tsx  StylePanel.tsx  Toolbar.tsx
frontend/src/hooks/: useApi.ts  useGraph.ts
frontend/src/types/: graph.ts
helm/unfold/: Chart.yaml  README.md  values.yaml
helm/unfold/templates/: _helpers.tpl  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  neo4j-service.yaml  neo4j-statefulset.yaml
